dev/aws-cft-kafka.yaml
Parameters:
  SSHKeyPair:
    Type: String
  VPC:
    Type: String
  MinKafkaBoxes:
    Type: String
    AllowedPattern: '[\d]+'
  MaxKafkaBoxes:
    Type: String
    AllowedPattern: '[\d]+'
Resources:
  KafkaSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: KafkaSG
      GroupDescription: 'Accept requests for Kafka, SSH, and ping'
      SecurityGroupIngress:
        - Description: ping
          IpProtocol: icmp
          CidrIp: 0.0.0.0/0
          FromPort: '8'
          ToPort: '-1'
        - Description: SSH
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: '22'
          ToPort: '22'
        - Description: Kafka
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: '9092'
          ToPort: '9095'
      VpcId: !Ref VPC
  KafkaSN1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
      CidrBlock: 10.0.64.0/20
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
  KafkaSN2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
      CidrBlock: 10.0.80.0/20
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
  KafkaSN3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - !GetAZs
      CidrBlock: 10.0.96.0/20
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
  KafkaLC:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      AssociatePublicIpAddress: false
      ImageId: ami-a36f8dc4
      InstanceType: t2.small
      KeyName: !Ref SSHKeyPair
      SecurityGroups:
        - !Ref KafkaSG
  KafkaASG:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      AutoScalingGroupName: KafkaASG
      LaunchConfigurationName: !Ref KafkaLC
      MaxSize: !Ref MaxKafkaBoxes
      MinSize: !Ref MinKafkaBoxes
      VPCZoneIdentifier:
        - !Ref KafkaSN1
        - !Ref KafkaSN2
        - !Ref KafkaSN3
